workloads/traefik/traefik-deployment.yaml
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: traefik
  labels:
    app.kubernetes.io/name: traefik
    app.kubernetes.io/component: traefik
spec:
  endpointSelector:
    matchLabels:
      app.kubernetes.io/name: traefik
      app.kubernetes.io/component: traefik
  ingress:
  - toPorts:
    - ports:
      - port: "8000"
        protocol: TCP
      - port: "8443"
        protocol: TCP
    fromEntities:
    - all
---
apiVersion: v1
kind: Service
metadata:
  name: traefik-frontend
  labels:
    type: frontend
    app.kubernetes.io/name: traefik
    app.kubernetes.io/component: traefik
spec:
  type: LoadBalancer
  ipFamilies: [IPv4, IPv6]
  ipFamilyPolicy: RequireDualStack
  selector:
    app.kubernetes.io/name: traefik
    app.kubernetes.io/component: traefik
  ports:
  - name: http
    port: 80
    targetPort: http
  - name: https
    port: 443
    targetPort: https
---
apiVersion: networking.k8s.io/v1
kind: IngressClass
metadata:
  name: traefik
  labels:
    app.kubernetes.io/name: traefik
  annotations:
    ingressclass.kubernetes.io/is-default-class: "true"
spec:
  controller: traefik.io/ingress-controller
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: traefik
  labels:
    app.kubernetes.io/name: traefik
    app.kubernetes.io/component: traefik
spec:
  selector:
    matchLabels:
      app.kubernetes.io/name: traefik
      app.kubernetes.io/component: traefik
  template:
    metadata:
      labels:
        app.kubernetes.io/name: traefik
        app.kubernetes.io/component: traefik
        cluster.local/allow-apiserver-egress: "true"
    spec:
      securityContext:
        fsGroup: 65532
      serviceAccountName: traefik
      terminationGracePeriodSeconds: 60
      containers:
      - name: traefik
        image: docker.io/traefik:v2.11.2
        ports:
        - name: http
          containerPort: 8000
        - name: https
          containerPort: 8443
        - name: web
          containerPort: 9000
        securityContext:
          allowPrivilegeEscalation: false
          capabilities:
            drop:
            - ALL
          readOnlyRootFilesystem: true
          runAsGroup: 65532
          runAsNonRoot: true
          runAsUser: 65532
        livenessProbe:
          failureThreshold: 3
          httpGet:
            path: /ping
            port: web
          initialDelaySeconds: 10
          periodSeconds: 10
          successThreshold: 1
          timeoutSeconds: 2
        readinessProbe:
          failureThreshold: 1
          httpGet:
            path: /ping
            port: web
          initialDelaySeconds: 10
          periodSeconds: 10
          successThreshold: 1
          timeoutSeconds: 2
        volumeMounts:
        - name: config
          mountPath: /etc/traefik
        - name: tmp
          mountPath: /tmp
      volumes:
      - name: config
        configMap:
          name: traefik
      - name: tmp
        emptyDir: {}
